Add admin APIs for checking on analysis deployments
